<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/arithmetic_process_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            android:textSize="38sp"
            tool:text="115 + 320 - 10" />

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tool:text="465" />

        <Spinner
            android:id="@+id/spinner_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:entries="@array/spinner_history" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_weight="55"
        android:columnCount="3"
        android:orientation="vertical"
        android:rowCount="5"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/button_c"
            style="@style/operand_button"
            android:text="@string/button_c" />

        <Button
            android:id="@+id/button_7"
            style="@style/numbers_button"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button_4"
            style="@style/numbers_button"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button_1"
            style="@style/numbers_button"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button_0"
            style="@style/numbers_button"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/buttonLeftPrances"
            style="@style/numbers_button"
            android:backgroundTint="@color/operand_background"
            android:text="@string/button_left_prances" />

        <Button
            android:id="@+id/button_8"
            style="@style/numbers_button"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/button_5"
            style="@style/numbers_button"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button_2"
            style="@style/numbers_button"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/buttonRightPrances"
            style="@style/numbers_button"
            android:backgroundTint="@color/operand_background"
            android:text="@string/button_right_prances" />

        <Button
            android:id="@+id/button_9"
            style="@style/numbers_button"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/button_6"
            style="@style/numbers_button"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/button_3"
            style="@style/numbers_button"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button_dot"
            style="@style/numbers_button"
            android:text="@string/button_dot" />

        <Button
            android:id="@+id/button_plus"
            style="@style/operand_button"
            android:text="@string/button_plus" />

        <Button
            android:id="@+id/button_minus"
            style="@style/operand_button"
            android:text="@string/button_minus" />

        <Button
            android:id="@+id/button_mul"
            style="@style/operand_button"
            android:text="@string/button_mul" />

        <Button
            android:id="@+id/button_div"
            style="@style/operand_button"
            android:text="@string/button_div" />

        <Button
            android:id="@+id/button_equal"
            style="@style/numbers_button"
            android:backgroundTint="@color/equal_background"
            android:text="@string/button_equal" />
    </GridLayout>
</LinearLayout>